fix dumb mistake with wrong custom property name for padding. explicitly block text-wrap: balance for heading which appears able to break flexbox (at least in Firefox)

--- a/src/style.scss
+++ b/src/style.scss
@@ -7,6 +7,7 @@
 
 .mrw-accordion .mrw-accordion__heading {
 	padding: var(--mrw-accordion--button-padding);
+	text-wrap: wrap !important;
 
 	&:not(.has-background) {
 		background-color: var(--mrw-accordion--color);
@@ -37,7 +38,7 @@
 	gap: 1em;
 	align-items: center;
 	width: 100%;
-	padding: var(--mrw-accordion--color);
+	padding: var(--mrw-accordion--button-padding);
 	cursor: pointer;
 
 	&:focus {
